<resources>
    <string name="app_name">bluetoothex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="layout2_time">시간 설정하기</string>
    <string name="layout2_week">요일 설정하기</string>
    <string name="layout2_title">알람이 설정되지 않았습니다.</string>
    <string name="week_mon">월</string>
    <string name="week_sun">일</string>
    <string name="week_sat">토</string>
    <string name="week_fri">금</string>
    <string name="week_thu">목</string>
    <string name="week_wed">수</string>
    <string name="week_tue">화</string>
</resources>
