<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="#ffffff"
    android:orientation="horizontal">

    <Button
        android:id="@+id/week_sun"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_sun"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/week_mon"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_mon"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/week_tue"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_tue"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/week_wed"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_wed"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/week_thu"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_thu"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/week_fri"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_fri"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/week_sat"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/week_sat"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>